make section service, logo, and team responsive

--- a/final-checkpoint/index.html
+++ b/final-checkpoint/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div class="logo">
-                <img src="assets/img/logo.png" alt="Company Logo">
+                <img src="../assets/img/RevoU Youtube Thumbnail (1).png" alt="Company Logo">
             </div>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
@@ -59,7 +59,6 @@
             </div>
         </div>
     </section>
-
 
 <section class="portfolio">
     <h2>Our Portfolio</h2>
