--- a/checkpoint1/index.html
+++ b/checkpoint1/index.html
@@ -120,7 +120,13 @@
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
 
-
+        <div class="user-selection">
+            <h3>Choose a User</h3>
+            <input type="radio" name="user" value="type" required>
+            <label for="type">Personal</label>
+            <input type="radio" name="user" value="type" required>
+            <label for="type">Company</label>
+        </div>
         <div class="service-selection">
             <h3>Choose a Service</h3>
             <select name="service" required>
